# open-range

./: .gitignore  .pre-commit-config.yaml  .rules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPEN_SOURCE_PLAN.md  README.md  ROADMAP.md  SECURITY.md  TASKLIST.md  config.ini  docker-compose.yml  openenv.yaml  pyproject.toml  setup.py  spec_final.md  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
candidate/: kind-config.yaml  manifest-summary.json
candidate/openrange/: values.yaml
candidate/openrange/templates/: externalname-services.yaml  namespaces.yaml  sandboxes.yaml
candidate/synth/: synth-summary.json
candidate/synth/svc-db/: 01-init.sql
candidate/synth/svc-email/: etc__openrange__silent_mail_rule.json
candidate/synth/svc-fileshare/: finance_docs.txt
candidate/synth/svc-siem/: index.html
candidate/synth/svc-web/: index.html  opt__openrange__footholds__wk-sql-injection-svc-web.txt  var__www__html__search.php
data/: README.md  sft.jsonl  tool_info.md
deploy/argocd/: README.md  argocd-values.yaml  bootstrap-argocd.sh  snapshot-application.yaml.tpl
deploy/cilium/: README.md  bootstrap-cilium.sh  cilium-values.yaml  hubble-relay-patch.yaml
deploy/k3d/: k3d-config.yaml.tpl  k3d-down.sh  k3d-up.sh  k3d.env.example
deploy/monitoring/: README.md  alert-rules.yaml  deploy-monitoring.sh  prometheus-values.yaml  servicemonitor.yaml
deploy/vault/: README.md  bootstrap-vault.sh  policy.hcl  values.yaml
docker/: attacker.Dockerfile  db-init.sql  files-entrypoint.sh  files.Dockerfile  firewall-default.rules  firewall-entrypoint.sh  firewall.Dockerfile  mail-entrypoint.sh  mail.Dockerfile  samba-smb.conf  siem-entrypoint.sh  siem.Dockerfile  web-entrypoint.sh  web-nginx-default.conf  web.Dockerfile
docs/: agent-protocols.md  architecture.md  benchmark-offensive-coverage.md  builder-validator.md  effect-grounding.md  how-an-episode-works.md  npc-profiles.md  openenv-compliance.md  red-blue-agents.md  rewrite-tasklist.md  synthetic-data.md  training-data-spec.md  v1-live-eval-audit.md  v1-paper-scope.md  weakness-lifecycle.md
examples/: _office_demo.py  auto_eval.py  codex_eval.py  demo.py  demo_config.yaml  remote_client_demo.py  strands_eval.py
examples/custom_eval/: README.md  run_openrange_eval.py
examples/strands/: README.md  run_openrange_strands.py
manifests/: registry.yaml  schema.py  tier1_basic.yaml  tier1_hard.yaml  tier1_security.yaml  tier2_corporate.yaml  tier2_hard.yaml  tier3_enterprise.yaml
packs/cyber_webapp/: README.md  pyproject.toml
packs/cyber_webapp/cyber_webapp/: __init__.py  builder.py  checks.py  llm_generation.py  mutation.py  ontology.py  priors.py  sampling.py
packs/cyber_webapp/cyber_webapp/codegen/: __init__.py  discovery.py  entrypoint.py  handlers.py  seeding.py
packs/cyber_webapp/cyber_webapp/codegen/templates/: app.py.j2
packs/cyber_webapp/cyber_webapp/npcs/: __init__.py  admin_audit.py  browsing_user.py  curious_employee.py  office_chatter.py
packs/cyber_webapp/cyber_webapp/vulnerabilities/: __init__.py
packs/cyber_webapp/cyber_webapp/vulnerabilities/templates/: broken_authz.py.j2  sql_injection.py.j2  ssrf.py.j2
schemas/: manifest.schema.json  reference_bundle.schema.json
scripts/: eval_model_rollouts.py  eval_rollouts.py  eval_tiny_sft.py  generate_schemas.py  generate_traces.py  migrate_issues.py  migrate_prs.py  npc_activity.py  render_and_test.py  run_grpo.py  train_tiny_sft.py
server/: Dockerfile  __init__.py  app.py  environment.py
src/manifests/: schema.py
src/open_range/: __init__.py  _admission_checks.py  _admission_registry.py  _code_web_common.py  _code_web_remediation.py  _code_web_render.py  _code_web_specs.py  _decision_sft.py  _episode_driver.py  _objective_rules.py  _reference_replay.py  _reference_sim.py  _runtime_hooks.py  _runtime_store.py  _trace_policies.py  admission.py  admission_plan.py  admission_scoring.py  admit.py  async_utils.py  audit.py  build_config.py  cli.py  cluster.py  code_web.py  compiler.py  counterfactuals.py  credential_lifecycle.py  curriculum.py  decision_surface.py  driver.py  effect_markers.py  encryption_enforcement.py  episode_config.py  eval_remote_model_rollouts.py  execution.py  gitops_publisher.py  green.py  hubble_observer.py  identity_enforcement.py  (+41 more)
src/open_range/admission/: __init__.py  actions.py  checks.py  controller.py  encryption.py  identity.py  live.py  live_necessity.py  live_security.py  models.py  mtls.py  plan.py  reference_checks.py  references.py  registry.py  remediation.py  scoring.py
src/open_range/admit/: __init__.py
src/open_range/agents/: __init__.py  autonomous_adapter.py  autonomous_scheduler.py  episode.py  eval.py  human_agent.py  llm_agent.py  npc_adapter.py  npc_scheduler.py  parsing.py  prompts.py  protocol.py  replay_agent.py  scripted_agent.py  solvers.py
src/open_range/builder/: __init__.py  (+7 more)
src/openrange/: __init__.py  __main__.py  agent_backend.py  llm.py  npc.py  runtime.py
tests/: conftest.py  support.py  test_admission_compat.py  test_admission_registry.py  test_agent_backend.py  test_agents.py  test_app.py  test_architecture_contracts.py  test_audit.py  test_build_pipeline.py  test_builder.py  test_catalog_objectives.py  test_catalog_probes.py  test_catalog_services.py  test_catalog_weaknesses.py  test_catalog_world.py  test_cilium_policies.py  test_cli.py  test_client.py  test_cluster.py  test_codex_eval_example.py  test_compiler.py  test_configs.py  test_console.py  test_console_bridge.py  test_console_context.py  test_core_integration.py  test_credential_lifecycle.py  test_curriculum.py  test_curriculum_integration.py  test_cyber_auto_curriculum.py  test_cyber_codegen.py  test_cyber_npcs.py  test_cyber_ontology_v1.py  test_cyber_procedural_builder.py  test_cyber_vulnerabilities.py  test_cyber_webapp_offense_pack.py  test_dashboard.py  test_dashboard_runs.py  test_decision_sft.py  (+68 more)
vulns/: catalog.yaml
(+265 files in other folders)
