[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"
license = "MIT"

[project]
name = "openrange"
version = "0.1.0"
description = "Domain-agnostic admitted world builder for agent training environments."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
strands = [
    "strands-agents>=1.38.0",
    "strands-agents-tools>=0.4.1",
]

[project.scripts]
openrange = "openrange.__main__:main"

[project.entry-points."openrange.packs"]
"cyber.webapp.offense" = "openrange.packs:CyberWebappOffensePack"

[dependency-groups]
dev = [
    "coverage[toml]>=7.13",
    "mypy>=1.19",
    "pytest>=9.0",
    "ruff>=0.15.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openrange"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["openrange"]
omit = [
    "src/openrange/__main__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
