[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"
license = "MIT"

[project]
name = "openrange"
version = "0.1.0"
description = "Domain-agnostic admitted world builder for agent training environments."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PyYAML>=6.0.3",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
strands = [
    "strands-agents>=1.38.0",
    "strands-agents-tools>=0.4.1",
]

[project.scripts]
openrange = "openrange.__main__:main"

# Built-in packs live in their own workspace members under packs/ — they
# register themselves via openrange.packs / openrange.npcs entry points
# in their own pyproject.toml. Core has none.

[dependency-groups]
dev = [
    "coverage[toml]>=7.13",
    "mypy>=1.19",
    "pytest>=9.0",
    "ruff>=0.15.6",
    "openrange-cyber-webapp",
]

[tool.uv.workspace]
members = ["packs/cyber_webapp"]

[tool.uv.sources]
openrange-cyber-webapp = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/openrange"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.14"
mypy_path = ["src", "packs/cyber_webapp"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

# Strands is an optional dependency (``openrange[strands]``). Skip
# import resolution so the core type-checks cleanly even when it
# isn't installed.
[[tool.mypy.overrides]]
module = ["strands", "strands.*", "strands_tools", "strands_tools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["openrange", "cyber_webapp"]
omit = [
    "src/openrange/__main__.py",
]

[tool.coverage.report]
# Was 100. Lowered while v1 settles — large parts of dashboard / episode
# /v0-LLM-builder paths lost their tests when v0 was deleted. Bringing
# coverage back to 100 is a follow-up.
fail_under = 85
show_missing = true
skip_covered = true
