[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "openrange-cyber-webapp"
version = "0.1.0"
description = "Cyber webapp pack for OpenRange — procedural multi-service web targets with HTTP-shaped vulns."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "openrange",
    "PyYAML>=6.0.3",
    "Jinja2>=3.1",
]

[project.entry-points."openrange.packs"]
"cyber.webapp" = "cyber_webapp:CyberWebappPack"

[project.entry-points."openrange.npcs"]
"cyber.browsing_user" = "cyber_webapp.npcs.browsing_user:factory"
"cyber.admin_audit" = "cyber_webapp.npcs.admin_audit:factory"
"cyber.curious_employee" = "cyber_webapp.npcs.curious_employee:factory"
"cyber.office_chatter" = "cyber_webapp.npcs.office_chatter:factory"

[tool.hatch.build.targets.wheel]
packages = ["cyber_webapp"]

[tool.uv.sources]
openrange = { workspace = true }
